Added date on the weather component and revised styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App h1 {
   margin-top: 20px;
   font-weight: bold;
-  color: black;
+  color: rgb(2, 2, 93);
   text-align: center;
   text-transform: uppercase;
 }
