--- a/src/Weather.css
+++ b/src/Weather.css
@@ -3,7 +3,7 @@
   border: 1px solid #3fdbf0;
   padding: 16px;
   margin: 20px auto;
-  max-width: 1000px;
+  max-width: 800px;
   border-radius: 5px;
   color: white;
 }
@@ -50,6 +50,7 @@
 }
 
 .Weather .weather-description {
-  padding-left: 280px;
+  padding-top: 30px;
+  padding-left: 190px;
   line-height: 30px;
 }
