--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,6 +1,6 @@
 .Weather {
   background: radial-gradient(#0072b6, #050141);
-  border: 1px solid #3fdbf0;
+  border: 2px solid #3fdbf0;
   padding: 16px;
   margin: 20px auto;
   max-width: 800px;
@@ -17,7 +17,7 @@
 }
 
 .Weather li {
-  font-size: 18px;
+  font-size: 20px;
   line-height: 19x;
   list-style: none;
 }
@@ -28,11 +28,9 @@
   padding-right: 28px;
 }
 
-.Weather img {
-  height: 130px;
-  margin-top: -150px;
-  margin-bottom: -80px;
-  margin-right: 15px;
+.Weather canvas {
+  margin-bottom: -20px;
+  margin-right: 10px;
   margin-left: 25px;
 }
 
