--- a/src/Weather.css
+++ b/src/Weather.css
@@ -35,20 +35,24 @@
 }
 
 .Weather .temperature {
-  font-size: 70px;
-  font-weight: bold;
+  font-size: 72px;
+  font-weight: 600;
+}
+
+.float-left {
+  float: left;
 }
 
 .Weather .unit {
-  position: relative;
   top: -34px;
-  margin-left: 2px;
-  font-size: 25px;
-  font-weight: bold;
+  position: relative;
+  font-size: 20px;
+  padding-left: 5px;
+  font-weight: 400;
 }
 
 .Weather .weather-description {
-  padding-top: 30px;
+  padding-top: 26px;
   padding-left: 190px;
   line-height: 30px;
 }
