--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,16 +1,45 @@
 .WeatherForecast {
   text-align: center;
+  text-transform: capitalize;
+  font-size: 16px;
+  margin-top: 40px;
+  margin-bottom: 25px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.WeatherForecast .flex-container {
+  text-align: center;
+  border-radius: 6px;
+  text-align: center;
+  color: rgb(4, 4, 117);
+  background: radial-gradient(#3fdbf0, #9198e5);
+  box-shadow: 3px 3px 3px white;
 }
 
 .WeatherForecast-day {
-  font-size: 20px;
+  font-size: 18px;
   padding-left: 10px;
+  padding-top: 10px;
   padding-bottom: 5px;
+  font-weight: bold;
+}
+
+.WeatherForecast-temperature {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .WeatherForecast-temperature-max {
-  color: rgb(46, 195, 245);
   margin-right: 30px;
   margin-left: 20px;
-  font-weight: bold;
+  font-weight: 600;
+}
+
+.WeatherForecast-description {
+  word-spacing: 3px;
+  padding-left: 15px;
+  padding-right: 5px;
+  font-size: 14px;
+  font-weight: 600;
 }
